2010-03-26  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #13386: Bug: mod.web_list.hideTables doesn't accept spaces (Thanks to Marcel Greter)
	* Follow-up to bug #13681: Added testcase for t3lib_div::revExplode
	* Fixed bug #13681: Improve performance of t3lib_div::revExplode

2010-03-26  Francois Suter  <francois@typo3.org>

	* Fixed bug #3716: includeCSS changed behavior, must default to media="all" (thanks to internezzo ag)

2010-03-25  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #13901: GIFBULDER generates same picture twice (in typo3temp/GB) (thanks to Vladimir Podkovanov)
	* Follow-up to #13739: Make the clickmenu work for the case when "Substitute Mount Point" is not set

2010-03-25  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to bug #11239: Added testcase for tslib_content->getQueryArguments()
	* Follow-up to bug #11239: Added testcase for t3lib_div::arrayDiffAssocRecursive()
	* Follow-up to bug #11239: typolink addQueryString.exclude does not support arrays, main patch for tslib_content
	* Fixed bug #11239: typolink addQueryString.exclude does not support arrays, pre-patch to add t3lib_div::arrayDiffAssocRecursive()
	* Added feature #9289: Missing index for deleting outdated session data in fe_session_data
	* Fixed bug #9769: Organisation in mail header should be Organization

2010-03-24  Stanislas Rolland  <typo3@sjbr.ca>

	* Added feature #13909: htmlArea RTE: Extjize the default non-TYPO3 image dialogue
	* Follow-up to feature #13878: htmlArea RTE: Extjize the default non-TYPO3 link dialogue
	* Follow-up to feature #13785: htmlArea RTE: Extjize Find & Replace dialogue

2010-03-23  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #13811: Missing formHandler in ExtDirect API (Thanks to Stefan Galinski)

2010-03-23  Dmitry Dulepov  <dmitry.dulepov@gmail.com>

	* Fixed bug #9229: indexing of records containing HTML leads to concatenated words
	* Fixed bug #8933: icons in indexed search modfunc1 are not skinned
