@@ -6,7 +6,8 @@
 
 2010-03-26  Francois Suter  <francois@typo3.org>
 
-	* Fixed bug #3716: includeCSS changed behavior, must default to media="all" (thanks to internezzo ag)
+	* Fixed bug #13716: includeCSS changed behavior, must default to media="all" (thanks to internezzo ag)
+	* Fixed bug #13678: Bug: htmlmail send mail twice if cc recipient is set (thanks to Robert Heel)
 
 2010-03-25  Ernesto Baschny  <ernst@cron-it.de>
 
